# gossamer-runtime-leak

./: .gitignore  Dockerfile  Makefile  allocator.go  docker-compose.yaml  go.mod  go.sum  imports.go  imports_func.go  main.go  memory.go  wasm.wasm
mem_exported/: main.go
mem_imported/: main.go
v2.0.0/: Dockerfile  README.md  allocator.go  go.mod  main.go  memory.go  westend_runtime-v9381.compact.compressed.wasm
v3.3.0/: docker-compose.yaml  go.mod  go.sum  imports.go  imports_func.go  main.go  memory.go
wasm/: Cargo.toml  makefile
wasm/src/: lib.rs  models.rs
