[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wasm"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "link-args=--import-memory"]
